--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,18 +1,20 @@
 .login-form-container {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  // flex-direction: column;
   font-size: 15px;
   height: 100%;
   width: 100%;
   position: absolute;
-  margin: auto;
+  // margin: auto;
   background-color: #F7F5F2;
 }
 
 .login-form-box {
-  position: relative;
+  position: absolute;
   display: flex;
+  top: 100px;
+  // align-content: center;
 }
 
 .login-form {
